tests/NormalTests/paczka1/fuzzy1/64093203.err
Error in line 1: mM5Fh A267 70,5
Error in line 4: SlsiS A267 96,0
Error in line 9: MIG02zh8 A256 84,0
Error in line 12: MIG02zh8 A135 0,5
Error in line 13: Hr33LwqK9 A256 10,3
Error in line 16: MIG02zh8 A267 93,5
Error in line 27: LYNTnrr A256 44,0
